# rust

./: .gitignore  commands.txt
hands-on-rust/: info.txt
programming-rust-book/1-hello-rust/: tags
rust-programming-lang/: commands.txt  info.txt
rust-programming-lang/ch02_basics/: Cargo.toml  info.txt
rust-programming-lang/ch03_syntax/: Cargo.toml
rust-programming-lang/ch04_ownership/: info.txt
rust-programming-lang/ch05_structs/: info.txt
rust-programming-lang/ch06_enums/: info.txt
rust-programming-lang/ch07_modules/: info.txt
rust-programming-lang/ch08_collections/: Cargo.toml
rust-programming-lang/ch09_error_handling/: info.txt
rust-programming-lang/ch10_generics_traits_lifetimes/: Cargo.toml
rust-programming-lang/ch11_tests/: info.txt
rust-programming-lang/ch14_cargo/: Cargo.toml  info.txt
rust-programming-lang/ch14_cargo/src/: lib.rs  main.rs
rust-programming-lang/ch17_oop/: info.txt
rust-servers-services-apps/: info.txt
rust-servers-services-apps/ezytutors/tutor-web-app-ssr/: .env  Cargo.toml
rust-servers-services-apps/ezytutors/tutor-web-app-ssr/src/iter5/: dbaccess.rs  errors.rs  model.rs  routes.rs  state.rs
rust-servers-services-apps/ezytutors/tutor-web-app-ssr/src/iter5/dbscripts/: user.sql
rust-servers-services-apps/ezytutors/tutor-web-app-ssr/src/iter6/handler/: course.rs
rust-servers-services-apps/ezytutors/tutor-web-app-ssr/static/iter2/: user.html
rust-servers-services-apps/ezytutors/tutor-web-app-ssr/static/iter4/: list.html
rust-servers-services-apps/ezytutors/tutor-web-app-ssr/static/iter5/: register.html
(+86 files in other folders)
