[package]
name = "tutor-web-app-ssr"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
## The async runtime for Actix. Rust requires an external runtime engine for executing async code.
actix-rt = "2.10.0"
# Data serialization library
serde = { version = "1.0.110", features = ["derive"] }
# Other utilities
chrono = { version = "0.4.11", features = ["serde"] }

#Postgres access library
sqlx = { version = "0.6.2", default_features = false, features = [
  "postgres",
  "runtime-tokio-native-tls",
  "macros",
  "chrono",
] }

# Openssl for build (if openssl is not already installed on the dev server)
# Needed to build the binary
openssl = { version = "0.10.41", features = ["vendored"] }
dotenv = "0.15.0"
actix-files = "0.6.6"
tera = "1.20.0"
serde_json = "1.0.138"
awc = "3.5.1"
rust-argon2 = "2.1.0"
